fixed english translation selection, wrapped link around button instead of other way around, added fade in for search page

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -12,10 +12,24 @@
  */
 body {
   --bs-light-rgb: var(--matr-navbar-bg-rgb);
-  background-image: url("https://assets.editorial.aetnd.com/uploads/2009/12/gettyimages-1352563243.jpg");
-  background-size: cover;
-  top: 0px !important;
+  background: url("https://assets.editorial.aetnd.com/uploads/2009/12/gettyimages-1352563243.jpg") center center/cover no-repeat;
+  top: 0 !important;
 }
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .landing-button{
   background-color: #98C1D9 !important;
   border-color: #98C1D9 !important;
